--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	
+	  
+	  <!-- Images by Pexels.com under CC0 License -->
+	  <!-- free for personal and commercial use -->
+	  
 	  <title>miRango home page</title>
 	  
 	  <meta charset="utf-8">
@@ -16,19 +19,18 @@
 	  <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 	  
 	  <style>
-	  
 		.navbar-brand {
-			color: white;
+			color:white;
 			font-family:Caveat Brush;
 			font-size:25px;
 		}
 		
 		.navbar-brand:hover {
-			color: #E68804;
+			color:black;
 			font-family:Caveat Brush;
 			font-size:25px;
 		}
-		
+
 		.bg1 {
 			margin:0;
 			background-image:url("https://images.pexels.com/photos/367915/pexels-photo-367915.jpeg");
@@ -67,7 +69,7 @@
 			font-family:Roboto;
 			font-size:16px;
 			color:#74A698;
-			font-weight: bold;
+			font-weight:bold;
 			text-decoration:none;
 		}
 		
@@ -85,26 +87,26 @@
 		}
 		
 		footer {
-			background-color: #f2f2f2;
-			padding: 25px;
+			background-color:#f2f2f2;
+			padding:25px;
 		}
 		
 		input[type=text] {
-			width: 350px;
-			box-sizing: border-box;
-			border: 2px solid #ccc;
-			border-radius: 4px;
-			font-size: 16px;
-			background-color: white;
-			background-position: 10px 10px; 
-			background-repeat: no-repeat;
-			padding: 12px 20px 12px 40px;
-			-webkit-transition: width 0.4s ease-in-out;
-			transition: width 0.4s ease-in-out;
+			width:350px;
+			box-sizing:border-box;
+			border:2px solid #ccc;
+			border-radius:4px;
+			font-size:16px;
+			background-color:white;
+			background-position:10px 10px; 
+			background-repeat:no-repeat;
+			padding:12px 20px 12px 40px;
+			-webkit-transition:width 0.4s ease-in-out;
+			transition:width 0.4s ease-in-out;
 		}
 
 		input[type=text]:focus {
-			width: 60%;
+			width:60%;
 		}
 		
 		.opaco {
@@ -123,31 +125,31 @@
 		}
 		
 		.botao {
-			background-color: #0A0706;
-			border: 2px solid #0A0706;
+			background-color:#0A0706;
+			border:2px solid #0A0706;
 			color:white;
-			padding: 12px 20px 12px 20px;
-			text-align: center;
-			text-decoration: none;
-			display: inline-block;
-			font-size: 16px;
-			width: 60px;
-			box-sizing: border-box;
-			border-radius: 4px;
+			padding:12px 20px 12px 20px;
+			text-align:center;
+			text-decoration:none;
+			display:inline-block;
+			font-size:16px;
+			width:60px;
+			box-sizing:border-box;
+			border-radius:4px;
 		}
 		
 		.botao:hover {
-			background-color: #5C8C45;
-			border: 2px solid #0A0706;
-			color: white;		
-			padding: 12px 20px 12px 20px;
-			text-align: center;
-			text-decoration: none;
-			display: inline-block;
-			font-size: 16px;
-			width: 60px;
-			box-sizing: border-box;
-			border-radius: 4px;
+			background-color:#5C8C45;
+			border:2px solid #5C8C45;
+			color:white;		
+			padding:12px 20px 12px 20px;
+			text-align:center;
+			text-decoration:none;
+			display:inline-block;
+			font-size:16px;
+			width:60px;
+			box-sizing:border-box;
+			border-radius:4px;
 		}
 		
 		.borda {
@@ -184,10 +186,9 @@
 				<div class="collapse navbar-collapse" id="myNavbar">
 					&nbsp;
 					
-					
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="registrar.html">registrar</a></li>
-						<li><a href="entrar.html">entrar</a></li>
+						<li><a href="register.html"><span class="glyphicon glyphicon-user"></span></a></li>
+						<li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span></a></li>
 					</ul>
 				</div>
 			
@@ -208,7 +209,7 @@
 		
 		<!-- segunda opcao -->
 		<br><br><br>
-		<h3 class="titulo3" align="center">Navegue também por categoria</h3><br>
+		<h3 class="titulo3" align="center">Navegue também por categoria</h3>
 		<br>
 		
 		<!-- categorias1 -->
@@ -270,6 +271,7 @@
 
 		<br><br>
 
+		<!-- copyright -->
 		<footer class="container-fluid text-center">
 		  <h6>miRango App &copy; 2017</h6>
 		</footer>
