--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
 	  <!-- Images by Pexels.com under CC0 License -->
 	  <!-- free for personal and commercial use -->
 	  
-	  <title>miRango home page</title>
+	  <title>miRango login</title>
 	  
 	  <meta charset="utf-8">
 	  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
